# zed

./: Cargo.toml
apps/ascii_game/: Cargo.toml  README.md
apps/ascii_game/src/: main.rs
assets/prompts/: saya_scene_prompt.hbs
crates/saya/: Cargo.toml
crates/saya/src/: main.rs
docs/: AGENTS.md
docs/desktop-app-toolkit/: README.md  ai-integration.md  architecture.md  ascii-game.md  building.md  design-system.md  packages.md  saya.md
docs/src/ai/: configuration.md
script/: bundle-mac-saya
